# halutmatmul

./: .editorconfig  .gitignore  .gitlint  .gitmodules  .mypy.ini  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE.txt  README.md  environment.yml  environment_cpu.yml  environment_gpu.yml  environment_lock.yml  environment_mac.yml  halut  halut.env  pyproject.toml  pyrightconfig.json  pytest.ini
.github/: Dockerfile
.github/vast.ai/: Dockerfile  README.md  vast.py  vast_ai_helper.py
.github/workflows/: cpp_testing.yaml  filter.yaml  gpu_tests.yaml  hw_dv.yaml  hw_linting.yaml  hw_openroad.yaml  linting.yaml  python_mypy.yaml  python_testing.yaml  python_typing.yaml  resnet9_validation.yaml  testing.yaml
docs/: addendum.md  conda.md  hardware.md  pre-commit.md  pytorch.md
docs/documents/weekly_meeting/: README.md
hardware/: .gitignore  Bender.yml  Dockerfile  Makefile  README.md  environment_hw.yml  environment_lock.yml  halut_top.core
hardware/analysis/: plotting.py  subunit.py  subunits_energy.py
hardware/docs/: OpenROAD.md  asap7.md  mflowgen.md
hardware/dv/fp_16_32_adder/: Makefile  test.py  test_fp_16_32_adder.core  test_fp_16_32_adder.py
hardware/dv/fp_16_comparision/: Makefile  test_fp_16_comparision.core  test_fp_16_comparision.py
hardware/dv/fp_16_to_32_convert/: Makefile  test.py  test_fp_16_to_32_convert.core  test_fp_16_to_32_convert.py
hardware/dv/fp_adder/: Makefile  test.py  test_fp_adder.core  test_fp_adder.py
hardware/dv/halut_decoder/: Makefile  test_halut_decoder.core  test_halut_decoder.py
hardware/dv/halut_decoder_x/: Makefile  test_halut_decoder_x.core  test_halut_decoder_x.py
hardware/dv/halut_encoder/: Makefile  test_halut_encoder.core  test_halut_encoder.py
hardware/dv/halut_encoder_4/: Makefile  test_halut_encoder_4.core  test_halut_encoder_4.py
hardware/dv/halut_matmul/: Makefile  test_halut_matmul.core  test_halut_matmul.py
hardware/dv/scm/: Makefile  test.py  test_scm.core  test_scm.py
hardware/dv/util/: helper_functions.py  test_util.core
hardware/flow/: .gitignore  openroad.lock.hjson  openroad.vendor.hjson
hardware/flow/asap7/: config.mk  constraint.sdc  fastroute.tcl
hardware/flow/nangate45/: config.mk  constraint.sdc
hardware/flow/patches/OpenROAD/: fix_asap7.patch  nangate-config.patch
hardware/lint/: common.core
hardware/lint/veriblelint/: lowrisc-styleguide.rules.verible_lint  verible.waiver
hardware/lint/verilator/: verilator_waiver.vlt
hardware/pdks/: .gitignore  halut_pdk_asap7.core  halut_pdk_gf22.core  halut_pdk_nangate45.core
hardware/power/: .gitignore  primetime_power.tcl  pt_shell  run.sh
hardware/rtl/: fp_16_32_adder.sv  fp_16_comparision.sv  fp_16_to_32_convert.sv  fp_add.sv  fp_adder.sv  fp_defs_pkg.sv  fp_leading_one.sv  fp_norm.sv  halut_decoder.sv  halut_decoder_x.sv  halut_encoder.sv  halut_encoder_4.sv  halut_matmul.sv  halut_pkg.sv  mixed_int_adder.sv  prim_clock_gating.sv  register_file_latch.sv  register_file_mem_latch.sv  scm.sv
hardware/scripts/: install_glibc.sh  patchelf_all.sh
hardware/sim/halut_encoder_sim/: sim_halut_encoder.core  sim_halut_encoder.py
hardware/sim/halut_matmul_sim/: Makefile  sim_halut_matmul.core  sim_halut_matmul.py
hardware/sim/util/: halut_sim_util.core  remove_cells.sh
hardware/util/: checkStorage.sh  genMetrics.py  genReport.py  genReportTable.py  generateReadmeTable.py  halut_util_report_openroad.core  halut_util_sv2v.core  run_sweep.py  sv2v_in_place.py  vendor.py
maddness/: README.md  download_assets.sh
maddness/cpp/: CMakeLists.txt  README.md  build.sh  halut.env
maddness/cpp/src/: avx_utils.cpp  bolt.cpp  main.cpp  mithral.cpp
maddness/cpp/src/include/: avx_utils.hpp  bit_ops.hpp  bolt.hpp  debug_utils.hpp  eigen_utils.hpp  memory.hpp  mithral.hpp  mithral_v1.hpp  multi_codebook.hpp  nn_utils.hpp  timing_utils.hpp
maddness/cpp/src/utils/: eigen_utils.hpp  memory.hpp
maddness/cpp/test/: amm_common.hpp  main.cpp  profile_amm.cpp  profile_amm.hpp  profile_encode.cpp  profile_lut_creation.cpp  profile_multicodebook.cpp  profile_scan.cpp  test_mithral.cpp  test_multicodebook.cpp
maddness/cpp/test/include/: amm_common.hpp  profile_amm.hpp  testing_utils.hpp  timing_utils.hpp
maddness/python/: cifar_example.py  maddness.py
maddness/python/lib/: hash_function_helper.py  least_squares.py
maddness/python/maddness/: maddness.py
maddness/python/tests/: test_cifar.py  test_maddness.py
scripts/: clang-check.sh  install-cli.sh
src/: examples.py
src/cpp/: .gitignore  CMakeLists.txt  build.sh
src/cpp/src/: main.cpp
src/cpp/src/include/: maddness.hpp
src/python/: analysis.py  config.json  example.py  examples.py  execute.py  halut_learning.py  performance.py  resnet_default_test.py  retraining.py  run.py  starter.py  test.py  test_halut.py  train_initialization.py
src/python/ResNet/: resnet.py
src/python/backprop/: custom_autograd_functions.py  gradient_check.py  profile_path.py  simple.py  test_A_training.py  test_centroid_mapping.py  test_embedding.py  test_encoding.py  test_kmeans.py  test_lut_calculation.py  test_mse_calc.py  understanding_im2col.py
src/python/concepts/: custom_autograd_functions.py  gradient_check.py  profile_path.py  test_accuracy.py  test_centroid_mapping.py  test_encoding.py  test_kmeans.py  test_reformulation.py
src/python/halutmatmul/: decision_tree.py  decision_tree_and_pq.py  functions.py  halutmatmul.py  learn.py  maddness.py  maddness_legacy.py  maddness_multisplit.py  model.py  modules.py
src/python/halutmatmul/cuda/: functions.py  (+1 more)
src/python/models/: README.md  helper.py  resnet.py  resnet20.py  resnet9.py  resnet_georg.py
src/python/retraining/: sampler.py  train.py  utils_train.py
src/python/test/: model_eval.py  test_conv2d.py  test_conv2d_gpu.py  test_halut.py  test_halut_gpu.py  test_kernel_gpu.py  test_linear.py  test_linear_gpu.py  test_resnet.py
src/python/training/: README.md  presets.py  test_timm.py  timm_model.py  train.py  train_quantization.py  transforms.py  utils_train.py
src/python/utils/: analysis_helper.py
(+23 files in other folders)
